# LSRTM-Madagascar

./: Msilsprtm2d.c  meson.build  prtm2d.c
include/: meson.build  prtm2d.h
subprojects/: madagascar.wrap
